tests/integration/snapshots/integration__rules__several_non_existing_rules.snap
---
source: tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).arg(\"--rules\").arg(\"foo,any_is_na,barbaz\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules: foo, barbaz

----- args -----
--rules foo,any_is_na,barbaz
